fix: 아이디어 카드에서 tag가 많아지면 wrap 처리되도록 한다

--- a/src/components/Idea/IdeaMainSection/IdeaMainSection.module.scss
+++ b/src/components/Idea/IdeaMainSection/IdeaMainSection.module.scss
@@ -29,8 +29,11 @@
   .labelArea {
     @include flex_row(stretch, center);
     margin: 34px 0px;
+    flex-wrap: wrap;
+    gap: 10px;
+
     .LabelTag ~ .LabelTag {
-      margin-right: 0px 10px;
+      margin-left: 0px;
     }
   }
 }
